text alignment Correction

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,6 +17,7 @@ body::before {
     opacity: 0.3;
 }
 
-.total-budget {
+
+/* .total-budget {
     margin-right: 100px;
-}
+} */
